Added full page view support and more paths cases are handled

--- a/RemoteUrlClient/Views/root/index.cshtml
+++ b/RemoteUrlClient/Views/root/index.cshtml
@@ -45,8 +45,9 @@
 
         
       <div class="container">
-          <h3>Preview</h3>
-        <iframe src="about:blank" id="ifPreview"></iframe>
+          <h3>Preview <button type="button" id="btn_openNewWindow" class="btn btn-sm btn-info">Open New Window</button>
+</h3>
+        <div id="previewContainer">Nothing to preview yet.</div>
       </div>
 
     </div><!-- /.container -->
