--- a/RemoteUrlClient/Views/Shared/_Layout.cshtml
+++ b/RemoteUrlClient/Views/Shared/_Layout.cshtml
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+
     <link href="/Content/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/Content/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="/Content/css/site.css" rel="stylesheet"/>
     @Scripts.Render("~/bundles/modernizr")
 
     @Scripts.Render("~/bundles/jquery")
